fix: fix z-index issues with menus

--- a/sass/3-organisms/navigation.scss
+++ b/sass/3-organisms/navigation.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 15px;
-  z-index: 20;
+  z-index: 30;
   background-color: $light;
 
   @include media-breakpoint-up(md) {
