--- a/sass/3-organisms/navigation/navbar-mobile-collapsible.scss
+++ b/sass/3-organisms/navigation/navbar-mobile-collapsible.scss
@@ -5,7 +5,7 @@
     padding: 110px 30px 30px 30px;
     background-color: $light;
     position: absolute;
-    z-index: 5;
+    z-index: 20;
     top: 0;
     left: 0;
     width: 100%;
